# LibreSkies

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  COPILOT_INSTRUCTIONS.md  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  vulkan.cpp  vulkan.h
